	special case.
	* process.c (Fformat_network_address): Use local var for size,
	for brevity.
	* fns.c (vector): Remove; this old hack is no longer needed.
	* bytecode.c (exec_byte_code): Don't use XVECTOR before CHECK_VECTOR.

2011-04-29  Eli Zaretskii  <eliz@gnu.org>

	* w32heap.c (allocate_heap) [USE_LISP_UNION_TYPE || USE_LSB_TAG]:
	New version that can reserve upto 2GB of heap space.

2011-04-26  Chong Yidong  <cyd@stupidchicken.com>

	* nsfns.m (Fns_read_file_name): Doc fix (Bug#8534).

2011-04-18  Eli Zaretskii  <eliz@gnu.org>

	* s/ms-w32.h (localtime): Redirect to sys_localtime.

	* w32.c: Include <time.h>.
	(sys_localtime): New function.

2011-04-13  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (init_xdisp): Initialize echo_area_window (Bug#6451).

2011-04-10  Samuel Thibault  <sthibault@debian.org>  (tiny change)

	* sysdep.c (wait_for_termination): On GNU Hurd, kill returns -1 on
	zombies (Bug#8467).

2011-04-10  Chong Yidong  <cyd@stupidchicken.com>

	* buffer.c (syms_of_buffer): Doc fix (Bug#6902).

2011-04-08  Chong Yidong  <cyd@stupidchicken.com>

	* ftfont.c (get_adstyle_property, ftfont_pattern_entity): Use
	unsigned char, to match FcChar8 type definition.

	* xterm.c (handle_one_xevent):
	* xmenu.c (create_and_show_popup_menu):
	* xselect.c (x_decline_selection_request)
	(x_reply_selection_request): Avoid type-punned deref of X events.

2011-04-08  Samuel Thibault  <sthibault@debian.org>  (tiny change)

	* term.c (init_tty): Fix incorrect ifdef placement (Bug#8450).

2011-03-19  Christoph Scholtes  <cschol2112@googlemail.com>

	* process.c (Fformat_network_address): Doc fix.

2011-03-19  Chong Yidong  <cyd@stupidchicken.com>

	* buffer.h (BUF_BEGV, BUF_BEGV_BYTE, BUF_ZV, BUF_ZV_BYTE, BUF_PT)
	(BUF_PT_BYTE): Rewrite to handle indirect buffers (Bug#8219).
	These macros can no longer be used for assignment.

	* buffer.c (Fget_buffer_create, Fmake_indirect_buffer): Assign
	struct members directly, instead of using BUF_BEGV etc.