@@ -127,6 +127,11 @@
 	* w32heap.c (allocate_heap) [USE_LISP_UNION_TYPE || USE_LSB_TAG]:
 	New version that can reserve upto 2GB of heap space.
 
+2011-04-27  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* nsmenu.m: Replace all uses of XVECTOR with ASIZE and AREF.
+	This makes this file independent of the recent pseudovector change.
+
 2011-04-26  Chong Yidong  <cyd@stupidchicken.com>
 
 	* nsfns.m (Fns_read_file_name): Doc fix (Bug#8534).
